42a56effb9161590f936d898d0e0b107552e0731 fix: Stop panes misaligning when controls are deactivated
Jira Issue DD-2406

Sync to source repo @42a56effb9161590f936d898d0e0b107552e0731

--- a/css/searchPanes.foundation.css
+++ b/css/searchPanes.foundation.css
@@ -7,6 +7,7 @@ div.dtsp-topRow {
   justify-content: space-around;
   align-content: flex-start;
   align-items: flex-start;
+  min-height: 37px;
 }
 div.dtsp-topRow input.dtsp-search {
   text-overflow: ellipsis;
@@ -26,6 +27,10 @@ div.dtsp-topRow div.dtsp-subRow1 {
 div.dtsp-topRow div.dtsp-subRow1 div.dtsp-searchCont {
   position: relative;
   width: 100%;
+}
+div.dtsp-topRow div.dtsp-subRow1 div.dtsp-searchCont input.dtsp-disabledButton {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 div.dtsp-topRow div.dtsp-subRow1 input {
   padding-right: 2em;
